[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
fixed = "1.24.0"
itertools = "0.12.0"
num = "0.4.1"
once_cell = "1.16.0"
pathfinding = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
tinystr = "0.7.5"
